--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,19 @@
         <p id="fingerprint"></p>
       </div>
     </div>
+    <div id="drivercard">
+      <p id="lastname"></p>
+      <p id="firstname"></p>
+      <div id="driverinline">
+        <p id="driverdob"></p>
+        <p id="driversex"></p>
+        <p id="drivertypemotor"></p>
+        <p id="drivertypecar"></p>
+        <p id="drivertypetruck"></p>        
+        <p id="drivernationality"></p>
+        <p id="driverfingerprint"></p>
+      </div>
+    </div>
     <script src="assets/js/app.js" type="text/javascript"></script>
   </body>
 </html>
